# ScienceBot

./: Dockerfile  main.py  modelling.py  pyproject.toml  readme.md  solution_notes.md
